[gd_scene load_steps=27 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://start-assets/New Piskel (10)-1.png (2).png" type="Texture" id=2]
[ext_resource path="res://start-assets/montserrat_extrabold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://start-assets/Player/Hammer (4) (2)-1.png.png" type="Texture" id=4]
[ext_resource path="res://start-assets/Player/Hammer (4) (2)-2.png.png" type="Texture" id=5]
[ext_resource path="res://start-assets/Player/Hammer (4) (2)-3.png.png" type="Texture" id=6]
[ext_resource path="res://start-assets/Player/Hammer (4) (2)-4.png.png" type="Texture" id=7]
[ext_resource path="res://start-assets/Player/Death/Hammer (4) (2)-1.png.png" type="Texture" id=8]
[ext_resource path="res://start-assets/Player/Death/Hammer (4) (2)-2x.png.png" type="Texture" id=9]
[ext_resource path="res://start-assets/flash/Hammer (4)-1.png.png" type="Texture" id=10]
[ext_resource path="res://start-assets/flash/Hammer (4)-2.png.png" type="Texture" id=11]
[ext_resource path="res://start-assets/flash/Hammer (4)-3.png.png" type="Texture" id=12]
[ext_resource path="res://start-assets/flash/Hammer (4)-4.png.png" type="Texture" id=13]
[ext_resource path="res://start-assets/flash/Hammer (4)-5.png.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 19
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0.0313726, 0.027451, 0.027451, 1 )
Label/colors/font_color_shadow = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 1
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 1 )
Label/styles/normal = null

[sub_resource type="Animation" id=3]
resource_name = "fadein"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 4.8 ),
"transitions": PoolRealArray( 1, 1, 955.429 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Smash",
"speed": 25.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "death",
"speed": 0.01
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 35, 48 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 36, 20 )

[sub_resource type="Animation" id=7]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -55 ), Vector2( 1, -123 ), Vector2( 1, -123 ), Vector2( 1, 2019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Defualt"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "End"
tracks/0/type = "value"
tracks/0/path = NodePath(".:speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Character:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 270.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Character:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -55 ), Vector2( 9, -168 ), Vector2( 87, -168 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "in_air"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 33, 14 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 14.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -1 )
collision_mask = 24
script = ExtResource( 1 )
speed = Vector2( 0, 3000 )
gravity = 800.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.692308 )
margin_left = 21.0
margin_top = -84.0
margin_right = 61.0
margin_bottom = -44.0

[node name="Sprite" type="Sprite" parent="TextureRect"]
position = Vector2( 193.5, -67 )
scale = Vector2( 1.20333, 1.12 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 38.0
margin_top = -116.0
margin_right = 232.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Who am I ?

"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Text" type="AnimationPlayer" parent="TextureRect"]
autoplay = "fadein"
anims/fadein = SubResource( 3 )

[node name="Character" type="AnimatedSprite" parent="."]
position = Vector2( 1, -55 )
frames = SubResource( 4 )
animation = "death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -47 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -213 )
current = true
zoom = Vector2( 1, 1.1 )
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.4
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 0, -44 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.027451, 0.976471, 0.129412, 1 )
position = Vector2( 0, 27 )
shape = SubResource( 6 )

[node name="Animator" type="AnimationPlayer" parent="."]
autoplay = "Defualt"
anims/Death = SubResource( 7 )
anims/Defualt = SubResource( 8 )
anims/End = SubResource( 9 )
anims/in_air = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -11 )
shape = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 142, -134 )
frames = SubResource( 12 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Ground_body_entered"]
